--- a/scripts/QC.Rmd
+++ b/scripts/QC.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "`r basename(getwd())`"
 #author: "Carl Mathias Kobel / MEMO"
+#license: GNU GPL v3
+
 subtitle: "LFQ-MBR QC"
 date: "`r Sys.time()`"
 output:
@@ -16,8 +18,6 @@ editor_options:
 ---
 
 
-## Author: Carl Mathias Kobel / MEMO
-## License: GNU GPL v3
 
 `r paste("This report was generated in", getwd())`
 
@@ -329,6 +329,8 @@ protein_intensities_long %>%
     geom_histogram() + 
     scale_x_log10() +
     facet_wrap(~sample) + 
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) +
+
     labs(title = "Protein intensities per sample", 
         caption = "Horizontal scale is visually log-transformed.")
 
@@ -345,6 +347,8 @@ protein_intensities_long %>%
 
 
 ## Hierarchical clustering
+
+Dendrogram on protein intensities between samples.
 ```{r echo=FALSE, message=F, warning=F}
 
 options(vsc.dev.args = list(width = 600, height = 700, res = 70))
@@ -365,7 +369,7 @@ run_hclust = protein_intensities_altwide %>%
     hclust()
 
 run_hclust %>% 
-    plot()
+    plot(sub = "", xlab = "Euclidean distance")
  
 
 ```
