--- a/scripts/QC.Rmd
+++ b/scripts/QC.Rmd
@@ -469,3 +469,7 @@ plot_b_scaled = run_pca_scaled$x |>
 plot_a_scaled
 plot_b_scaled
 ```
+
+
+
+This report was generated with [MS-pipeline1](https://github.com/cmkobel/MS-pipeline1), developed by [Carl Mathias Kobel](https://github.com/cmkobel).
