--- a/scripts/QC.Rmd
+++ b/scripts/QC.Rmd
@@ -45,7 +45,7 @@ options(vsc.dev.args = list(width = 600, height = 700, res = 150))
 
 #setwd("/cluster/work/users/cmkobel/MS-pipeline1-split-output/220506_digesta_puchun") # For development
 #setwd("/cluster/work/users/cmkobel/MS-pipeline1-split-output/220506_DnnT6S_carl") # For development
-setwd("/mnt/evo/mspipeline1/output/DnnT6_ABCDEF") # For development
+#setwd("/mnt/evo/mspipeline1/output/DnnT6_ABCDEF") # For development
 
 
 
